--- a/demos/HtmlCssJsdemo/htmldemo.html
+++ b/demos/HtmlCssJsdemo/htmldemo.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!-- This is text without any decoration!<p style="color:aqua">This is a <strong><em>bold </em></strong>paragraph</p> -->
+  This is text without any decoration!<p style="color:aqua">This is a <strong><em>bold </em></strong>paragraph</p>
   <div>A div created a vertical allocation of the page where nothing will be printed to the right o the contents.</div>
   more text
   </br>this is text</br>this is
@@ -33,7 +33,7 @@
   <sup><sup>super-duper-script text</sup></sup>
 
   <!-- an class can be repeated in the document -->
-  <!-- <h1 class="h1-class h1-class2">header1</h1>
+  <h1 class="h1-class h1-class2">header1</h1>
   <h2 class="h2-class">header2</h2>
   <h3 id="h3-id">header 3</h3>
   <h4 id="h3-id">header 4</h4>
@@ -65,6 +65,10 @@
     <li>5th item</li>
   </ol>
 
+  <div onclick="HeBitMe()">You are in a div
+    <button>Push Me to change the background!</button>
+  </div>
+  <br><br>
   <table>
     <thead>
       <th style="width: 100px;">First Name</th>
@@ -137,9 +141,10 @@
     sit amet consectetur adipisicing elit. Repellat dicta quis sit molestiae temporibus doloremque sapiente alias optio
     quasi inventore? Tempora eaque adipisci sint dolorem quod, beatae quam doloremque illum? Lorem, ipsum dolor sit amet
     consectetur adipisicing elit. Non rem deleniti distinctio magni possimus perspiciatis eius, fugit totam repudiandae?
-    Voluptatem minima dolorum, soluta quam optio repudiandae culpa placeat facere. Explicabo.</p> -->
+    Voluptatem minima dolorum, soluta quam optio repudiandae culpa placeat facere. Explicabo.</p>
 
   <script src="071822batchJsDemo.js"></script>
+  <!-- div went here -->
 </body>
 
 </html>
